--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -26,7 +26,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="">New Task</a></li>
                 <li><a href="{{ url_for('categories') }}">Categories</a></li>
-                <li><a href="{{ url_for('add_category') }}">Add Category</a></li>
+                <li><a href="{{ url_for('addcategory') }}">Add Category</a></li>
             </ul>
             </div>
         </nav>
