--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -10,4 +10,19 @@
     </div>
 </div>
 
+<div class="row">
+    {% for category in categories %}
+    <div class="col s12 m6 l3">
+      <div class="card teal lighten-4 center-align">
+        <div class="card-content black-text">
+          <span class="card-title">{{ category.category_name }}</span>
+        </div>
+        <div class="card-action">
+          <a href="#" class="btn green accent-4">Edit</a>
+          <a href="#" class="btn red">Delete</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
